--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2334,9 +2334,9 @@
 	
 	.personal-pics img {
 		width:70%;
-		height:90%;
-		object-fit:contain;
-		border-radius:50%;
+		height:70%;
+		object-fit:cover;
+		border-radius:100%;
 	}
 
 	.image {
@@ -3505,10 +3505,12 @@
 		#banner .inner {
 			max-width: 65em;
 			width: calc(100% - 6em);
-			margin: 0 auto;
+			margin: auto;
 			position: relative;
 			z-index: 10000;
 			line-height: 1.5;
+			text-align:center;
+			bottom:45px;
 		}
 
 			@media screen and (max-width: 480px) {
