--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2010,63 +2010,6 @@
 				background-color: #e23135;
 			}
 
-/* Form */
-
-	form {
-		margin: 0 0 2em 0;
-	}
-
-		form .field {
-			margin: 0 0 2em 0;
-		}
-
-			form .field.half {
-				width: 50%;
-				float: left;
-				padding: 0 0 0 1em;
-			}
-
-				form .field.half.first {
-					padding: 0 1em 0 0;
-				}
-
-		form > .actions {
-			margin: 2.5em 0 0 0 !important;
-		}
-
-		@media screen and (max-width: 736px) {
-
-			form .field {
-				margin: 0 0 1.5em 0;
-			}
-
-				form .field.half {
-					padding: 0 0 0 0.75em;
-				}
-
-					form .field.half.first {
-						padding: 0 0.75em 0 0;
-					}
-
-			form > .actions {
-				margin: 2em 0 0 0 !important;
-			}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			form .field.half {
-				width: 100%;
-				float: none;
-				padding: 0;
-			}
-
-				form .field.half.first {
-					padding: 0;
-				}
-
-		}
 
 	label {
 		display: block;
@@ -2150,13 +2093,13 @@
 	input[type="checkbox"],
 	input[type="radio"] {
 		-moz-appearance: none;
-		-webkit-appearance: none;
+		
 		-ms-appearance: none;
-		appearance: none;
-		display: block;
-		float: left;
-		margin-right: -2em;
-		opacity: 0;
+		appearance: none; 
+		color:white;
+		float: center;
+		
+		opacity: 1;
 		width: 1em;
 		z-index: -1;
 	}
@@ -2208,7 +2151,7 @@
 	}
 
 	input[type="radio"] + label:before {
-		border-radius: 100%;
+		border-radius: 50%;
 	}
 
 	::-webkit-input-placeholder {
@@ -2321,6 +2264,13 @@
 		.icon > .label {
 			display: none;
 		}
+
+
+/* Form */
+.form-wrap {
+	color:white;
+	top: 20px;
+}
 
 /* Image */
 
