--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2272,6 +2272,30 @@
 	top: 20px;
 }
 
+
+
+
+
+/* .box {
+	height:100%;
+	width:70%;
+	margin-left:15%;
+	margin-right:15%;
+	background:#e5474b;
+	
+}
+.red {
+	background:#e5474b;
+	height:100%;
+
+
+} */
+/* .box-black {
+	height:100%;
+	width:100%;
+	background:black;
+} */
+
 /* Image */
 
 
