--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3793,7 +3793,7 @@
 			cursor: pointer;
 		}
 		.proile-rating{
-			font-size: 12px;
+			font-size: 15px;
 			color: #818182;
 			margin-top: 5%;
 		}
@@ -3802,7 +3802,7 @@
 			font-size: 15px;
 			font-weight: 600;
 		}
-		.profile-head .nav-tabs{
+		/* .profile-head .nav-tabs{
 			margin-bottom:5%;
 		}
 		.profile-head .nav-tabs .nav-link{
@@ -3812,9 +3812,9 @@
 		.profile-head .nav-tabs .nav-link.active{
 			border: none;
 			border-bottom:2px solid #18c912;
-		}
+		} */
 		.profile-work{
-			padding: 14%;
+			padding: 15%;
 			margin-top: -15%;
 		}
 		.profile-work p{
@@ -3831,6 +3831,7 @@
 		}
 		.profile-work ul{
 			list-style: none;
+			
 		}
 		.profile-tab label{
 			font-weight: 600;
@@ -3839,4 +3840,6 @@
 			font-weight: 600;
 			color: #0062cc;
 		}
+
+
 
