--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2016,7 +2016,7 @@
 		font-size: 0.9em;
 		text-transform: uppercase;
 		font-weight: 700;
-		margin: 0 0 1em 0;
+		margin: 0 0 0 0;
 	}
 
 	input[type="text"],
@@ -3824,7 +3824,6 @@
 		}
 		.profile-work a{
 			text-decoration: none;
-			color: #495057;
 			font-weight: 600;
 			font-size: 14px;
 		}
@@ -3889,7 +3888,8 @@
 
 		.profile-header{
 			text-align:center;
-			font-size: 250%;
+			font-size: 220%;
 			color: red;
-			font-family: "Comic Sans MS", cursive, sans-serif;
+            font-family: "Comic Sans MS", cursive, sans-serif;
+            /* margin-bottom: -3%; */
 		}
