--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3893,3 +3893,22 @@
             font-family: "Comic Sans MS", cursive, sans-serif;
             /* margin-bottom: -3%; */
 		}
+
+
+		.search-boxes{
+			width:90%;
+
+		}
+		.search-boxes h3{
+			font-size:175%;
+		}
+		.search-page{
+			float: left;
+			margin-left:5%;
+		}
+
+		.search-selection{
+			float: right;
+			margin-right:30%;
+			margin-top:0%;	
+		}
