--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3315,7 +3315,7 @@
 			right: 0;
 			text-align: right;
 			top: 0;
-			vertical-align: middle;
+			/* vertical-align: middle; */
 			width: 5em;
 		}
 
