Sahil patel/tutortimes (#58)
* added more to function, not done yet

* Function is working now! still needs few css/html changes for proper integration

* added function to hide 'subjects able to tutor' tab on students profile

* fixed css error incase that caused this fatal error

* javascript styling

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3315,7 +3315,7 @@
 			right: 0;
 			text-align: right;
 			top: 0;
-			vertical-align: middle;
+			/* vertical-align: middle; */
 			width: 5em;
 		}
 
@@ -3914,3 +3914,10 @@
 			margin-top:0%;	
 			width:50%;
 		}
+
+		 .search-button{
+			font-size:125%;
+			/* width:55%; */
+			
+			
+		} 
