tutor profile page 'requested sessions' update

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3878,11 +3878,37 @@
 
 
 		.profile-page{
+			float:left;
 			text-align:center;
 			border:double;
 			border-color:red;
-			margin-left: 30%;
-			margin-right: 30%;
+			margin-left: 0%;
+			margin-right: 0%; 
+			width:40%;
+			margin-top:2%;
+		}
+		.profile-requests{
+			float: left;
+			text-align:center;
+			text-decoration:underline;
+			text-decoration-color:red;
+			border:double;
+			border-color:red;
+			width:25%;
+			margin-left:1%;
+			margin-right: 1%;
+			margin-top:2%;
+		}
+		.profile-times{
+			float: left;
+			text-align:center;
+			text-decoration:underline;
+			text-decoration-color:red;
+			border:double;
+			border-color:red;
+			width:25%;
+			margin-left:4%;
+			margin-right: 1%;
 			margin-top:2%;
 		}
 
@@ -3921,3 +3947,7 @@
 			
 			
 		} 
+
+
+
+	
