--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3905,8 +3905,6 @@
 		.profile-times{
 			float: left;
 			text-align:center;
-			text-decoration:underline;
-			text-decoration-color:red;
 			border:double;
 			border-color:red;
 			width:25%;
@@ -3914,6 +3912,10 @@
 			margin-right: 1%;
 			margin-top:2%;
 			height:auto;
+		}
+		.profile-times h3{
+			text-decoration:underline;
+			text-decoration-color:red;
 		}
 
 		.profile-header{
@@ -3924,6 +3926,13 @@
             /* margin-bottom: -3%; */
 		}
 
+		.addbutton{
+			background:limegreen;
+			width:20%;
+			margin-bottom:1%;
+			font-size: 67%;
+			
+		}
 
 		.search-boxes{
 			width:90%;
